[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/entities/base_weapon/base_weapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/weapons/sword/sword.gd" type="Script" id=2]
[ext_resource path="res://src/weapons/sword/sword.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "weapon_ability"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 90.0, -30.0, 180.0, 90.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "in_hand"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "sheath"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, -12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 150.0 ]
}

[node name="Sword" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
position = Vector2( 5, 0 )
rotation = 1.5708
texture = ExtResource( 3 )
offset = Vector2( 0.5, -7 )
hframes = 1

[node name="Position" parent="." index="1"]
visible = false
position = Vector2( 12, 0 )
rotation = 0.523599

[node name="Animation" type="AnimationPlayer" parent="." index="2"]
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 2 )
anims/in_hand = SubResource( 4 )
anims/sheath = SubResource( 3 )

[connection signal="use_in_hand" from="." to="." method="_on_Sword_use_in_hand"]
[connection signal="use_sheath" from="." to="." method="_on_Sword_use_sheath"]
[connection signal="use_weapon_ability" from="." to="." method="_on_Sword_use_weapon_ability"]
